XSPEC: Model fitting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
+        "addcomp",
         "ftgrouppha",
         "grouptype",
         "infile",
         "ldata",
         "noback",
+        "phoindex",
         "rebin",
+        "renorm",
         "respfile",
         "setplot"
     ]
