eSASS: Creating light curve

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
         "renorm",
         "respfile",
         "setplot"
-    ]
+    ],
+    "cSpell.enabledFileTypes": {
+        "log": false
+    }
 }
